--- a/index.html
+++ b/index.html
@@ -5,27 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dmytro & Viktoriya — 20/06/2026</title>
   <meta name="description" content="Convite de casamento — Dmytro & Viktoriya — 20/06/2026 — Quinta do Pateo" />
-  <meta name="theme-color" content="#0b0c10" />
+  <meta name="theme-color" content="#f2f6ff" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <!-- Tipografia: base + caligráfica para o título -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Inter:wght@400;500;600&family=Great+Vibes&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css" />
 </head>
 
-<body>
+<body class="preInvite">
   <a class="skip" href="#conteudo">Saltar para o conteúdo</a>
 
-  <!-- HEADER: título caligráfico + marquee -->
-  <header class="heroHeader" aria-label="Capa com fotografias">
-   <div class="heroTitleTop">
-    <h1 class="scriptTitle">
-      Dmytro <span class="scriptAmp">&</span> Viktoriya
-    </h1>
+  <!-- ENVELOPE INTRO -->
+  <div class="introOverlay" id="introOverlay" role="dialog" aria-label="Abrir convite">
+    <div class="envelope" aria-hidden="false">
+
+      <div class="envelopeBack"></div>
+      <div class="letterGlow"></div>
+
+      <div class="envelopeFront">
+        <button class="stamp" id="openInvite" type="button" aria-label="Abrir convite">
+          <span>D &amp; V</span>
+        </button>
+      </div>
+
+      <div class="envelopeFlap"></div>
+    </div>
   </div>
+
+  <!-- HEADER: título + marquee -->
+  <header class="heroHeader" aria-label="Capa com fotografias">
+    <div class="heroTitleTop">
+      <h1 class="scriptTitle">
+        Dmytro <span class="scriptAmp">&</span> Viktoriya
+      </h1>
+      <p class="scriptMeta">20/06/2026 • Quinta do Pateo • Dois Portos</p>
+    </div>
 
     <div class="marquee" aria-hidden="true">
       <div class="marqueeTrack" id="marqueeTrack">
@@ -34,19 +51,13 @@
         <img src="assets/hero-3.jpg" alt="">
       </div>
     </div>
-
-    <div class="heroOverlay" aria-hidden="true"></div>
   </header>
 
-  <main id="conteudo">
-
-    <!-- HERO (sem H1, só conteúdo + countdown) -->
+  <main id="conteudo" tabindex="-1">
 
     <section class="hero" aria-label="Informação principal">
       <div class="wrap hero__grid">
-            <section class="section sectionTitle" aria-label="Título secundário">
-    <h2 class="secondaryTitle">Dmytro <span class="secondaryAmp">&</span> Viktoriya</h2>
-</section>
+
         <div class="hero__copy">
           <p class="eyebrow">Casamento</p>
 
@@ -75,15 +86,29 @@
 
           <div class="hero__actions">
             <a class="btn" href="#local">Ver localização</a>
+            <a class="btn btn--ghost" href="#agenda">Ver agenda</a>
           </div>
+        </div>
 
-      <div class="hero__fade" aria-hidden="true"></div>
+        <div class="hero__card card">
+          <h3>Estamos muito felizes por celebrar convosco ✨</h3>
+          <p class="muted">
+            Guardem a data e venham com vontade de sorrir, brindar e dançar.
+          </p>
+          <div class="miniRow">
+            <span class="miniTag">Branco &amp; Azul pastel</span>
+            <span class="miniTag">Ambiente leve</span>
+          </div>
+        </div>
+
+      </div>
     </section>
 
-    <!-- AGENDA (agora vem antes de Detalhes) -->
+    <!-- AGENDA -->
     <section class="section" id="agenda">
       <div class="wrap">
         <h2>Agenda</h2>
+
         <div class="timeline">
           <div class="timeline__item">
             <div class="timeline__time">—</div>
@@ -92,6 +117,7 @@
               <p class="muted">Hora a confirmar.</p>
             </div>
           </div>
+
           <div class="timeline__item">
             <div class="timeline__time">—</div>
             <div class="timeline__content">
@@ -99,6 +125,7 @@
               <p class="muted">Hora a confirmar.</p>
             </div>
           </div>
+
           <div class="timeline__item">
             <div class="timeline__time">—</div>
             <div class="timeline__content">
@@ -106,6 +133,7 @@
               <p class="muted">Hora a confirmar.</p>
             </div>
           </div>
+
           <div class="timeline__item">
             <div class="timeline__time">—</div>
             <div class="timeline__content">
@@ -134,7 +162,7 @@
 
           <article class="card">
             <h3>Hora</h3>
-            <p><span class="muted">A confirmar.</span> (Podemos atualizar aqui quando fecharem horários.)</p>
+            <p><span class="muted">A confirmar.</span></p>
           </article>
         </div>
       </div>
@@ -148,13 +176,14 @@
         <div class="twoCol">
           <div class="card">
             <h3>Quinta do Pateo</h3>
-            <p>Dois Portos — Torres Vedras</p>
+            <p class="muted">Dois Portos — Torres Vedras</p>
+
             <div class="btnRow">
               <a class="btn" target="_blank" rel="noopener"
                  href="https://www.google.com/maps/search/?api=1&query=Quinta%20do%20Pateo%2C%20Dois%20Portos%2C%20Torres%20Vedras">
                 Abrir no Google Maps
               </a>
-              <button class="btn btn--ghost" id="copyAddress">Copiar morada</button>
+              <button class="btn btn--ghost" id="copyAddress" type="button">Copiar morada</button>
             </div>
             <p class="tiny muted" id="copyHint" aria-live="polite"></p>
           </div>
@@ -178,7 +207,7 @@
         <div class="card">
           <p>
             <strong>Sugerido:</strong> elegante / cocktail.<br/>
-            <span class="muted">Não definimos nenhum dress code para o dia, porque a melhor decoração são vocês. Queremos que se sintam confortáveis e que espalhem felicidade e amor!</span>
+            <span class="muted">Queremos que se sintam confortáveis — a melhor decoração são vocês.</span>
           </p>
         </div>
       </div>
@@ -192,12 +221,12 @@
         <div class="faq">
           <details class="faq__item">
             <summary>Posso levar crianças?</summary>
-            <p class="muted">Claro! As crianças são sempre bem vindas.</p>
+            <p class="muted">Claro! As crianças são sempre bem-vindas.</p>
           </details>
 
           <details class="faq__item">
             <summary>Há estacionamento?</summary>
-            <p class="muted">Sim! Existe um local exatamente na entrada para a quinta, exclusivo para os nossos convidados.</p>
+            <p class="muted">Sim, existe estacionamento na entrada para os convidados.</p>
           </details>
 
           <details class="faq__item">
@@ -217,22 +246,4 @@
 
   <script src="script.js"></script>
 </body>
-          <!-- ENVELOPE INTRO -->
-<div class="introOverlay" id="introOverlay">
-  <div class="envelope">
-
-    <div class="envelopeBack"></div>
-
-    <div class="letterGlow"></div>
-
-    <div class="envelopeFront">
-      <div class="stamp" id="openInvite">
-        <span>D &amp; V</span>
-      </div>
-    </div>
-
-    <div class="envelopeFlap"></div>
-
-  </div>
-</div>
 </html>
